feat: enhance folder path handling in storage provider definitions and improve document retrieval logic